...
              {t('common.error.retry')}
            </Text>
          </Pressable>
        </View>
      ) : (
        <WebView
          testID="shared.webview.webview"
          key={key}
          source={{ uri: safeUrl }}
          style={styles.webview}
          startInLoadingState
          originWhitelist={buildOriginWhitelistForUrl(safeUrl)}
          onError={() => setError(true)}
...
